[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ymodem"
description = "Ymodem implementation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
]
dependencies = [
    "ordered-set>=4.1.0",
]
version = "1.5"

[tool.setuptools]
packages = ["ymodem"]
